--- a/Sex/Podfile
+++ b/Sex/Podfile
@@ -12,6 +12,7 @@ target 'Sex' do
   pod 'Masonry', '~> 1.0.2'
   pod 'MKDropdownMenu', '~> 1.3'
   pod 'XXNibBridge', '~> 2.3.1'
+  pod 'MKDropdownMenu', '~> 1.3'
   # Pods for Sex
 
 end
