--- a/Sex/Podfile
+++ b/Sex/Podfile
@@ -13,6 +13,7 @@ target 'Sex' do
   pod 'MKDropdownMenu', '~> 1.3'
   pod 'XXNibBridge', '~> 2.3.1'
   pod 'MKDropdownMenu', '~> 1.3'
+  pod 'HTHorizontalSelectionList'
   # Pods for Sex
 
 end
